test/success/std/tuple_trait_method/main.sk
module Main {

trait Foo[T] {
    fn foo(t: T) {

    }
}

instance Foo[()] {
    fn foo(b: ()) {

    }
}

fn main() {
    ().foo();
    foo(());
}

}