test/errors/associated_type_not_found_in_trait/main.sk
module Main {

trait A[T] {

}

class B {

}

instance A[B] {
    type Foo = B
}

fn main() {

}

}